--- a/mriprotocol/index.html
+++ b/mriprotocol/index.html
@@ -431,7 +431,7 @@
                                  <ul>
                                      <li>Axial T2 TSE: TR 4000-5000ms, TE 80-100ms, lát cắt 3-5mm<span class="citation">[111]</span>.</li>
                                      <li>Axial FLAIR: TR/TE/TI dài (ví dụ: TR 11000, TE 130, TI 2800), lát cắt 5mm<span class="citation">[111]</span>.</li>
-                                     <li>Axial DWI: EPI, $b=0$ và $b=1000~s/mm^{2},$ lát cắt 3-5mm<span class="citation">[111]</span>.</li>
+                                     <li>Axial DWI: EPI, b=0 và b=1000~s/mm^{2}, lát cắt 3-5mm<span class="citation">[111]</span>.</li>
                                      <li>Axial SWI: GRE, TR/TE ~50/40ms (3T) hoặc ~50/80ms (1.5T), lát cắt 3mm<span class="citation">[111]</span>.</li>
                                      <li>3D T1 (MPRAGE/SPGR): TR/TE/TI ~2000/3/900ms, ~1mm isotropic<span class="citation">[112]</span>.</li>
                                      <li>T1 sau tiêm: Tương tự T1 trước tiêm, thường có xóa mỡ<span class="citation">[112]</span>.</li>
@@ -472,7 +472,7 @@
                   <ul>
                      <li><strong>Protocol Tiêu Chuẩn (Có thể điều chỉnh cho Cổ/Ngực/Thắt lưng):</strong>
                          <ul>
-                             <li><em>Chuỗi xung:</em> Sagittal T1, Sagittal T2, Sagittal STIR (hoặc T2 xóa mỡ khác), Axial T2 (hoặc $T2^{*}$ GRE cho cột sống cổ)<span class="citation">[130]</span>. T1 sau tiêm (Sagittal và Axial, xóa mỡ) nếu có chỉ định<span class="citation">[131]</span>. (Dựa trên thực hành lâm sàng và <span class="citation">[131]</span>).</li>
+                             <li><em>Chuỗi xung:</em> Sagittal T1, Sagittal T2, Sagittal STIR (hoặc T2 xóa mỡ khác), Axial T2 (hoặc T2* GRE cho cột sống cổ)<span class="citation">[130]</span>. T1 sau tiêm (Sagittal và Axial, xóa mỡ) nếu có chỉ định<span class="citation">[131]</span>. (Dựa trên thực hành lâm sàng và <span class="citation">[131]</span>).</li>
                              <li><em>Mặt phẳng:</em> Sagittal và Axial là tiêu chuẩn. Coronal đôi khi được bổ sung (ví dụ: vẹo cột sống, u)<span class="citation">[132]</span>.</li>
                              <li><em>Độ dày lát cắt:</em> Thường là 3-4mm<span class="citation">[133]</span>.</li>
                              <li><em>Thuốc cản quang:</em> Sử dụng khi nghi ngờ u, nhiễm trùng, viêm, đánh giá sau phẫu thuật (sẹo xơ và đĩa đệm tái phát)<span class="citation">[133]</span>.</li>
@@ -522,7 +522,7 @@
                              <li><em>Chuỗi xung:</em> Axial T2 (thường là HASTE/SSFSE, nín thở hoặc thở tự do), Axial T1 trong pha và đối pha (in/out-of-phase) (phát hiện mỡ/sắt), Axial/Coronal T2 xóa mỡ, Axial DWI (+ bản đồ ADC)<span class="citation">[150]</span>. Chụp T1 xóa mỡ động học sau tiêm (dynamic post-contrast) ở các pha động mạch, tĩnh mạch cửa và pha muộn là phổ biến để đánh giá tổn thương<span class="citation">[151]</span>. (Tổng hợp từ <span class="citation">[152]</span>).</li>
                              <li><em>Mặt phẳng:</em> Chủ yếu là Axial, thường bổ sung Coronal<span class="citation">[152]</span>.</li>
                              <li><em>Độ dày lát cắt:</em> Thường là 5-8mm cho khảo sát thông thường, có thể mỏng hơn (3-4mm) cho các chuỗi xung động học T1 hoặc các tạng đặc biệt như tụy/thượng thận<span class="citation">[153, 154]</span>.</li>
-                             <li><em>Thuốc cản quang:</em> Thường xuyên sử dụng, đặc biệt để phát hiện/đặc điểm hóa tổn thương, đánh giá mạch máu<span class="citation">[154]</span>. Loại thuốc phụ thuộc vào chỉ định (ECA vs HBA)<span class="citation">[155]</span>. Thời điểm chụp các pha sau tiêm là rất quan trọng<span class="citation">[155, 156]</span>. Kỹ thuật theo dõi bolus (bolus tracking) hoặc tiêm thử (test bolus) giúp tối ưu hóa thời điểm chụp pha động mạch<span class="citation">[156, 157]</span>.</li>
+                             <li><em>Thuốc tương phản từ:</em> Thường xuyên sử dụng, đặc biệt để phát hiện/đặc điểm hóa tổn thương, đánh giá mạch máu<span class="citation">[154]</span>. Loại thuốc phụ thuộc vào chỉ định (ECA vs HBA)<span class="citation">[155]</span>. Thời điểm chụp các pha sau tiêm là rất quan trọng<span class="citation">[155, 156]</span>. Kỹ thuật theo dõi bolus (bolus tracking) hoặc tiêm thử (test bolus) giúp tối ưu hóa thời điểm chụp pha động mạch<span class="citation">[156, 157]</span>.</li>
                          </ul>
                      </li>
                       <li><strong>Bảng 4.1: Tóm Tắt Protocol MRI Bụng Tiêu Chuẩn</strong><span class="citation">[158, 159]</span>
@@ -541,13 +541,13 @@
                       <li><strong>Các Protocol Chuyên Biệt Cho Gan:</strong><span class="citation">[160]</span>
                          <ul>
                              <li><em>Phát hiện/Đặc điểm hóa tổn thương:</em> Yêu cầu độ nhạy cao<span class="citation">[160]</span>. DWI và các chuỗi xung sau tiêm thuốc cản quang là chìa khóa<span class="citation">[161]</span>.</li>
-                             <li><em>Thuốc cản quang:</em>
+                             <li><em>Thuốc tương phản từ:</em>
                                  <ul>
                                      <li><em>Thuốc ngoại bào (ECAs):</em> Đánh giá sự ngấm thuốc dựa trên tưới máu và sự thải thuốc (washout) của tổn thương<span class="citation">[162]</span>. Pha muộn thường chụp sau 3-5 phút<span class="citation">[163]</span>.</li>
                                      <li><em>Thuốc đặc hiệu tế bào gan (HBAs - Gadoxetate/Eovist, Gd-BOPTA):</em> Được tế bào gan khỏe mạnh hấp thu và bài tiết qua đường mật<span class="citation">[163]</span>. Cung cấp thêm pha gan-mật (Hepatobiliary Phase - HBP) sau khoảng 20 phút (Eovist) hoặc 90-120 phút (Gd-BOPTA)<span class="citation">[164]</span>. Pha HBP rất nhạy để phát hiện các tổn thương không chứa tế bào gan hoạt động (ví dụ: di căn, thường có tín hiệu thấp) và giúp phân biệt các loại tổn thương gan nguyên phát (ví dụ: HCC và FNH)<span class="citation">[164, 165]</span>. Gadoxetate (Eovist) được coi là tiêu chuẩn vàng để đánh giá giai đoạn di căn gan từ ung thư đại trực tràng (CRLM)<span class="citation">[165]</span>.</li>
                                  </ul>
                              </li>
-                             <li><em>Ví dụ Protocol Gan (dựa trên <span class="citation">[26]</span> và các nguồn khác):</em> Định vị, Axial T2 TSE FS (đồng bộ nhịp thở), Axial DWI ( $b=0$, 500, 1000), Coronal T1 VIBE/DIXON FS (nín thở), Axial T1 In/Opposed Phase (nín thở), Axial T1 VIBE/DIXON FS trước tiêm, Axial T1 VIBE/DIXON FS động học sau tiêm (Động mạch, Tĩnh mạch cửa, Cân bằng ~3-5 phút), Axial T1 VIBE/DIXON FS pha muộn (10 phút nếu dùng ECA hoặc 20 phút nếu dùng HBA)<span class="citation">[166]</span>. Độ dày lát cắt ~3mm cho T1 động học, ~4-5mm cho T2/DWI<span class="citation">[167]</span>.</li>
+                             <li><em>Ví dụ Protocol Gan (dựa trên <span class="citation">[26]</span> và các nguồn khác):</em> Định vị, Axial T2 TSE FS (đồng bộ nhịp thở), Axial DWI ( b=0, 500, 1000), Coronal T1 VIBE/DIXON FS (nín thở), Axial T1 In/Opposed Phase (nín thở), Axial T1 VIBE/DIXON FS trước tiêm, Axial T1 VIBE/DIXON FS động học sau tiêm (Động mạch, Tĩnh mạch cửa, Cân bằng ~3-5 phút), Axial T1 VIBE/DIXON FS pha muộn (10 phút nếu dùng ECA hoặc 20 phút nếu dùng HBA)<span class="citation">[166]</span>. Độ dày lát cắt ~3mm cho T1 động học, ~4-5mm cho T2/DWI<span class="citation">[167]</span>.</li>
                              <li><em>Tầm soát/Theo dõi HCC:</em> Các protocol rút gọn (Abbreviated MRI - AMRI) đang nổi lên<span class="citation">[168]</span>. Có thể không tiêm thuốc (NC-AMRI), chỉ chụp động học (Dynamic-AMRI), hoặc chỉ tập trung pha HBP (HBP-AMRI)<span class="citation">[169]</span>. Thời gian chụp ngắn hơn đáng kể (~10 phút)<span class="citation">[170]</span>. NC-AMRI tránh được nguy cơ và chi phí của thuốc cản quang<span class="citation">[170]</span>. HBP-AMRI cho độ tương phản tổn thương cao nhưng thiếu thông tin về mạch máu<span class="citation">[171]</span>. AMRI đã cho thấy hiệu suất chẩn đoán tốt trong tầm soát HCC<span class="citation">[172, 173]</span>.</li>
                          </ul>
                      </li>
