--- a/mriprotocol/index.html
+++ b/mriprotocol/index.html
@@ -289,6 +289,7 @@
             <li><a href="#vung-khac">Các Vùng Khác</a></li>
             <li><a href="#tai-lieu-hoa">Tài liệu hóa & Triển khai</a></li>
             <li><a href="#ket-luan">Kết luận & Xu hướng</a></li>
+            <li><a href="#nguon-trich-dan">Website tham khảo</a></li> </ul>
             <li><a href="#nguon-trich-dan">Nguồn trích dẫn</a></li> </ul>
 
         <a href="https://vnrad.tech/trangchu/" class="home-button">Trở về Trang Chủ</a>
@@ -861,7 +862,7 @@
             </ol>
         </section>
         <footer class="page-footer">
-            <p>© 2025 Cộng đồng Kỹ thuật viên hình ảnh y học Việt Nam - Vì mục đích an toàn bức xạ trong y tế</p>
+            <p>© 2025 Cộng đồng Kỹ thuật viên hình ảnh y học Việt Nam - Vì cộng đồng KTV chuyên nghiệp, tận tâm</p>
             <p>Biên soạn bởi nhóm KTV 3 Miền | Mục đích: Đào tạo & Tham khảo y khoa</p>
             <p class="disclaimer">Tuyên bố miễn trừ trách nhiệm: Thông tin trên trang web này chỉ mang tính tham khảo, không thay thế cho chẩn đoán, chỉ định hoặc tư vấn y tế chuyên nghiệp từ bác sĩ hoặc chuyên gia y tế có trình độ.</p>
             <p>Chịu trách nhiệm nội dung và thiết kế: Lê Thanh Trọng - 0944406507</p>
