--- a/contrast/index.html
+++ b/contrast/index.html
@@ -701,16 +701,16 @@
         <ul>
             <li>Ước tính độ lọc cầu thận (eGFR), được tính từ creatinine huyết thanh, là phương pháp được khuyến nghị để ước tính chức năng thận trước khi dùng thuốc cản quang.</li>
             <li>Ở người lớn $\ge 18$ tuổi, công thức CKD-EPI được khuyến nghị để tính eGFR.<br/>
-            $eGFR~(ml/min/1.73~m^2) = $<br/>
-            Nữ $sCr \le 62~\mu mol/l$: $144 \times (sCr/62)^{-0.329} \times 0.993^{Age}$<br/>
-            Nữ $sCr > 62~\mu mol/l$: $144 \times (sCr/62)^{-1.209} \times 0.993^{Age}$<br/>
-            Nam $sCr \le 80~\mu mol/l$: $141 \times (sCr/80)^{-0.411} \times 0.993^{Age}$<br/>
-            Nam $sCr > 80~\mu mol/l$: $141 \times (sCr/80)^{-1.209} \times 0.993^{Age}$<br/>
+            eGFR~(ml/min/1.73~m^2) = <br/>
+            Nữ sCr \le 62~\mu mol/l: 144 \times (sCr/62)^{-0.329} \times 0.993^{Age}<br/>
+            Nữ sCr > 62~\mu mol/l$: 144 \times (sCr/62)^{-1.209} \times 0.993^{Age}<br/>
+            Nam sCr \le 80~\mu mol/l: 141 \times (sCr/80)^{-0.411} \times 0.993^{Age}<br/>
+            Nam sCr > 80~\mu mol/l$: 141 \times (sCr/80)^{-1.209} \times 0.993^{Age}<br/>
             (sCr tính bằng µmol/l; tuổi tính bằng năm)<br/>
             Tất cả các phương trình x 1.159 nếu là người Mỹ gốc Phi.
             </li>
             <li>Ở trẻ em, công thức Schwartz sửa đổi được khuyến nghị để tính eGFR.<br/>
-            $eGFR~(ml/min/1.73~m^2) = 36.5 \times length / sCr$<br/>
+            eGFR~(ml/min/1.73~m^2) = 36.5 \times length / sCr<br/>
             (sCr tính bằng µmol/l; chiều dài tính bằng cm)
             </li>
         </ul>
@@ -726,8 +726,8 @@
                     <td><strong>Liên quan đến bệnh nhân</strong></td>
                     <td>
                         <ul>
-                            <li>eGFR dưới $45~ml/min/1.73~m^2$ trước khi tiêm thuốc cản quang động mạch có tiếp xúc thận lần đầu hoặc ở bệnh nhân ICU.</li>
-                            <li>eGFR dưới $30~ml/min/1.73~m^2$ trước khi tiêm thuốc cản quang tĩnh mạch hoặc tiêm thuốc cản quang động mạch có tiếp xúc thận lần hai.</li>
+                            <li>eGFR dưới 45~ml/min/1.73~m^2 trước khi tiêm thuốc cản quang động mạch có tiếp xúc thận lần đầu hoặc ở bệnh nhân ICU.</li>
+                            <li>eGFR dưới 30~ml/min/1.73~m^2 trước khi tiêm thuốc cản quang tĩnh mạch hoặc tiêm thuốc cản quang động mạch có tiếp xúc thận lần hai.</li>
                             <li>Suy thận cấp đã biết hoặc nghi ngờ.</li>
                         </ul>
                     </td>
@@ -755,7 +755,7 @@
                 <li>Hoặc (a) Ở tất cả bệnh nhân</li>
                 <li>Hoặc (b) Ở những bệnh nhân có tiền sử:
                     <ul>
-                        <li>Bệnh thận $(eGFR < 60~ml/min/1.73~m^2)$</li>
+                        <li>Bệnh thận (eGFR < 60~ml/min/1.73~m^2)</li>
                         <li>Phẫu thuật thận</li>
                         <li>Protein niệu</li>
                         <li>Tăng huyết áp</li>
@@ -895,9 +895,9 @@
 
          <h3 id="b7-khoang-cach-iod">B.7 KHOẢNG CÁCH GIỮA HAI LẦN TIÊM MÔI TRƯỜNG CẢN QUANG CHỨA IOD CHO CÁC KHÁM NGHIỆM THÔNG THƯỜNG LÀ BAO LÂU?</h3>
          <ol>
-            <li><strong>Bệnh nhân có chức năng thận bình thường hoặc suy giảm vừa phải ($eGFR > 30~ml/min/1.73~m^2$).</strong><br/>
+            <li><strong>Bệnh nhân có chức năng thận bình thường hoặc suy giảm vừa phải (eGFR > 30~ml/min/1.73~m^2).</strong><br/>
             75% môi trường cản quang chứa iod được bài tiết sau 4 giờ kể từ khi dùng. Nên có khoảng cách 4 giờ giữa các lần tiêm môi trường cản quang chứa iod.</li>
-             <li><strong>Bệnh nhân suy thận nặng ($eGFR < 30~ml/min/1.73~m^2$).</strong><br/>
+             <li><strong>Bệnh nhân suy thận nặng (eGFR < 30~ml/min/1.73~m^2).</strong><br/>
             Nên có khoảng cách 48 giờ giữa các lần tiêm môi trường cản quang chứa iod.</li>
              <li><strong>Bệnh nhân đang lọc máu.</strong><br/>
             Nếu còn chức năng thận tồn dư, nên có khoảng cách ít nhất 48 giờ giữa các lần tiêm môi trường cản quang chứa iod.</li>
@@ -905,9 +905,9 @@
 
          <h3 id="b8-khoang-cach-gadolinium">B.8 KHOẢNG CÁCH GIỮA HAI LẦN TIÊM THUỐC CẢN QUANG CHỨA GADOLINIUM CHO CÁC KHÁM NGHIỆM THÔNG THƯỜNG LÀ BAO LÂU?</h3>
          <ol>
-            <li><strong>Bệnh nhân có chức năng thận bình thường hoặc suy giảm vừa phải ($eGFR > 30~ml/min/1.73~m^2$).</strong><br/>
+            <li><strong>Bệnh nhân có chức năng thận bình thường hoặc suy giảm vừa phải (eGFR > 30~ml/min/1.73~m^2).</strong><br/>
             75% thuốc cản quang ngoại bào chứa gadolinium được bài tiết sau 4 giờ kể từ khi dùng. Nên có khoảng cách 4 giờ giữa các lần tiêm thuốc cản quang chứa gadolinium.</li>
-             <li><strong>Bệnh nhân suy thận nặng ($eGFR < 30~ml/min/1.73~m^2$) hoặc đang lọc máu.</strong><br/>
+             <li><strong>Bệnh nhân suy thận nặng (eGFR < 30~ml/min/1.73~m^2) hoặc đang lọc máu.</strong><br/>
             Nên có khoảng cách 7 ngày giữa các lần tiêm thuốc cản quang chứa gadolinium.</li>
         </ol>
         <hr/>
