--- a/contrast/index.html
+++ b/contrast/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
     <script src="https://cdn.counter.dev/script.js" data-id="86e74dda-26a8-41de-99d1-63d0e8fec60e" data-utcoffset="7"></script>
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hướng Dẫn ESUR về Thuốc Cản Quang 10.0</title>
@@ -467,7 +468,7 @@
             <li>Gọi đội hồi sức.</li>
             <li>Hút đường thở nếu cần.</li>
             <li>Nâng cao chân bệnh nhân nếu tụt huyết áp.</li>
-            <li>Oxy qua mặt nạ ($6-10~l/min$).</li>
+            <li>Oxy qua mặt nạ (6-10~l/min).</li>
             <li>Adrenaline tiêm bắp (1:1,000), 0.5 ml (0.5 mg) ở người lớn - lặp lại nếu cần. Ở bệnh nhi: 6-12 tuổi: 0.3 ml (0.3 mg) tiêm bắp; < 6 tuổi: 0.15 ml (0.15 mg) tiêm bắp.</li>
             <li>Truyền dịch tĩnh mạch (ví dụ: muối sinh lý, dung dịch Ringer's) tối đa 2 lít.</li>
             <li>Thuốc kháng H1, ví dụ: diphenhydramine 25-50 mg tiêm tĩnh mạch.</li>
@@ -699,20 +700,28 @@
 
         <h3 id="b1-do-than">B.1 ĐO CHỨC NĂNG THẬN</h3>
         <ul>
-            <li>Ước tính độ lọc cầu thận (eGFR), được tính từ creatinine huyết thanh, là phương pháp được khuyến nghị để ước tính chức năng thận trước khi dùng thuốc cản quang.</li>
-            <li>Ở người lớn $\ge 18$ tuổi, công thức CKD-EPI được khuyến nghị để tính eGFR.<br/>
-            eGFR~(ml/min/1.73~m^2) = <br/>
-            Nữ sCr \le 62~\mu mol/l: 144 \times (sCr/62)^{-0.329} \times 0.993^{Age}<br/>
-            Nữ sCr > 62~\mu mol/l$: 144 \times (sCr/62)^{-1.209} \times 0.993^{Age}<br/>
-            Nam sCr \le 80~\mu mol/l: 141 \times (sCr/80)^{-0.411} \times 0.993^{Age}<br/>
-            Nam sCr > 80~\mu mol/l$: 141 \times (sCr/80)^{-1.209} \times 0.993^{Age}<br/>
-            (sCr tính bằng µmol/l; tuổi tính bằng năm)<br/>
-            Tất cả các phương trình x 1.159 nếu là người Mỹ gốc Phi.
-            </li>
-            <li>Ở trẻ em, công thức Schwartz sửa đổi được khuyến nghị để tính eGFR.<br/>
-            eGFR~(ml/min/1.73~m^2) = 36.5 \times length / sCr<br/>
-            (sCr tính bằng µmol/l; chiều dài tính bằng cm)
-            </li>
+             <li>Ở người lớn hơn hoặc bằng 18 tuổi, công thức CKD-EPI được khuyến nghị để tính eGFR:
+                    <div class="math-block">
+                    $$
+                    \begin{aligned}
+                    &\text{eGFR (ml/min/1.73 m}^2) = \\
+                    &\text{Nữ sCr} \le 62~\mu\text{mol/l: } 144 \times (\text{sCr}/62)^{-0.329} \times 0.993^{\text{Age}} \\
+                    &\text{Nữ sCr} > 62~\mu\text{mol/l: } 144 \times (\text{sCr}/62)^{-1.209} \times 0.993^{\text{Age}} \\
+                    &\text{Nam sCr} \le 80~\mu\text{mol/l: } 141 \times (\text{sCr}/80)^{-0.411} \times 0.993^{\text{Age}} \\
+                    &\text{Nam sCr} > 80~\mu\text{mol/l: } 141 \times (\text{sCr}/80)^{-1.209} \times 0.993^{\text{Age}}
+                    \end{aligned}
+                    $$
+                    </div>
+                    (sCr tính bằng µmol/l; tuổi tính bằng năm)<br/>
+                    Tất cả các phương trình x 1.159 nếu là người Mỹ gốc Phi.
+                </li>
+             <li>Ở trẻ em, công thức Schwartz sửa đổi được khuyến nghị để tính eGFR:
+    <br/>
+    $$
+    \text{eGFR (ml/min/1.73 m}^2) = 36.5 \times \text{length} / \text{sCr}
+    $$
+    (sCr tính bằng µmol/l; chiều dài tính bằng cm)
+</li>
         </ul>
         <p>Lưu ý: Cả creatinine huyết thanh lẫn huyết tương đều không phải là chỉ số lý tưởng về chức năng thận và có thể bỏ sót tình trạng suy giảm chức năng thận.</p>
 
