--- a/contrast/index.html
+++ b/contrast/index.html
@@ -7,27 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hướng Dẫn ESUR về Thuốc Cản Quang 10.0</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            height: 100vh;
-            overflow: hidden;
-            background-color: #f8f9fa; /* Màu nền tổng thể hơi xám nhẹ */
-        }
-        #navbar {
-            width: 320px; /* Điều chỉnh lại độ rộng */
-            background-color: #f8f9fa; /* Nền sáng cho nav */
-            color: #333333; /* Chữ màu tối */
-            padding: 15px;
-            height: 100%;
-            overflow-y: auto;
-            border-right: 1px solid #dee2e6; /* Đường kẻ phân cách */
+       body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    margin: 0;
+    padding: 0; /* Đã sửa lỗi: Đặt padding về 0 hoặc giá trị có đơn vị */
+    line-height: 1.6;
+    height: 100vh;
+    overflow: hidden; /* Giữ overflow: hidden để ngăn thanh cuộn chính */
+    background-color: #f8f9fa;
+}
+       #navbar {
+    width: 800px; /* Giữ nguyên hoặc điều chỉnh độ rộng */
+    background-color: #f8f9fa;
+    color: #0056b3;
+    padding: 0px; /* Giữ nguyên hoặc điều chỉnh padding bên trong navbar */
+
+    /* Thêm margin để tạo khoảng cách */
+    margin-left: 40px; /* Khoảng cách với lề trái, ví dụ 20px */
+    margin-bottom: 100px; /* Khoảng cách với lề dưới, ví dụ 20px */
+
+    height: 98%; /* Giữ nguyên, nhưng margin-bottom sẽ làm giảm không gian thực tế còn lại */
+    overflow-y: auto;
+    border-right: 1px solid #dee2e6;
+    /* position: relative; - (nếu cần cho nút footer) */
+
         }
         #navbar .menu-title { /* Kiểu cho chữ "Menu" */
-            font-size: 18px;
+            font-size: 30px;
             font-weight: bold;
             padding: 10px 5px;
             margin-bottom: 10px;
@@ -41,12 +48,12 @@
          /* Kiểu mặc định cho các mục menu */
         #navbar ul li a {
             text-decoration: none;
-            color: #343a40; /* Màu chữ menu mặc định */
+            color: #0056b3; /* Màu chữ menu mặc định */
             display: block;
-            padding: 8px 10px; /* Giảm padding một chút */
+            padding: 0px 0px; /* Giảm padding một chút */
             border-radius: 4px;
-            margin-bottom: 3px; /* Giảm khoảng cách */
-            font-size: 14px;
+            margin-bottom: 1px; /* Giảm khoảng cách */
+            font-size: 16px;
             transition: background-color 0.2s ease; /* Hiệu ứng chuyển màu nền */
         }
          /* Kiểu khi di chuột qua mục menu */
@@ -70,14 +77,14 @@
         /* Kiểu cho menu con (sub-menu) */
         #navbar ul ul {
              padding-left: 20px; /* Thụt lề menu con */
-             margin-top: 5px;
+             margin-top: 0px;
              border-left: 2px solid #e0e0e0; /* Thêm đường kẻ dọc cho submenu */
              margin-left: 5px; /* Khoảng cách với đường kẻ */
-             padding-top: 5px;
+             padding-top: 0px;
         }
         #navbar ul ul li a {
              padding: 6px 10px;
-             font-size: 13px;
+             font-size: 14px;
              color: #495057; /* Màu chữ nhạt hơn cho submenu */
              /* Không có nền xanh đặc biệt ngay cả khi mục cha active */
          }
@@ -93,18 +100,18 @@
          }
 
 
-        #main-content {
-            flex-grow: 1;
-            padding: 20px 35px; /* Điều chỉnh padding */
-            height: 100%;
-            overflow-y: auto;
-            background-color: #ffffff; /* Nền trắng */
-            color: #212529; /* Màu chữ đậm hơn một chút */
+       #main-content {
+    flex-grow: 1;
+    padding: 30px 30px 10px 30px; /* padding: trên phải dưới trái (ví dụ: dưới 50px) */
+    height: 95%;
+    overflow-y: auto;
+    background-color: #ffffff;
+    color: #212529;
         }
         h1 {
              color: #0056b3; /* Màu xanh tiêu đề chính */
              border-bottom: 2px solid #0056b3; /* Đường gạch chân */
-             padding-bottom: 8px;
+             padding-bottom: 0px;
              margin-top: 0;
              margin-bottom: 25px; /* Tăng khoảng cách dưới h1 */
              font-size: 26px;
@@ -147,31 +154,32 @@
             text-decoration: underline;
         }
         /* Định dạng cơ bản cho bảng */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 15px;
-            margin-bottom: 15px;
-            font-size: 14px;
-        }
-        th, td {
-            border: 1px solid #dee2e6;
-            padding: 8px 10px;
-            text-align: left;
-            vertical-align: top;
-        }
-        th {
-            background-color: #e9ecef; /* Nền xám nhẹ cho header bảng */
-            font-weight: bold;
-        }
-        /* Căn giữa cột nếu cần */
-        td.center, th.center {
-            text-align: center;
-        }
-         /* Căn phải cột nếu cần */
-        td.right, th.right {
-             text-align: right;
-        }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 14px;
+}
+th, td {
+    /* Đổi màu viền sang màu xanh nhẹ #b0e0e6 */
+    border: 1px solid #b0e0e6;
+    padding: 8px 10px;
+    text-align: left;
+    vertical-align: top;
+}
+th {
+    background-color: #b0e0e6; /* Màu xanh nhẹ (PaleTurquoise) cho header */
+    font-weight: bold;
+}
+/* Căn giữa cột nếu cần */
+td.center, th.center {
+    text-align: center;
+}
+/* Căn phải cột nếu cần */
+td.right, th.right {
+    text-align: right;
+}
 
     </style>
 </head>
