--- a/contrast/index.html
+++ b/contrast/index.html
@@ -452,22 +452,22 @@ td.right, th.right {
         </ol>
         <p><strong>Phù thanh quản:</strong></p>
         <ol>
-            <li>Oxy qua mặt nạ ($6-10~l/min$).</li>
+            <li>Oxy qua mặt nạ (6-10~l/min).</li>
             <li>Adrenaline tiêm bắp (1:1,000), 0.5 ml (0.5 mg) cho người lớn - lặp lại nếu cần. Ở bệnh nhi: 6-12 tuổi: 0.3 ml (0.3 mg) tiêm bắp; < 6 tuổi: 0.15 ml (0.15 mg) tiêm bắp.</li>
         </ol>
          <p><strong>Tụt huyết áp:</strong></p>
          <p><em>Tụt huyết áp đơn độc:</em></p>
         <ol>
             <li>Nâng cao chân bệnh nhân.</li>
-            <li>Oxy qua mặt nạ ($6-10~l/min$).</li>
+            <li>Oxy qua mặt nạ (6-10~l/min).</li>
             <li>Truyền dịch tĩnh mạch: nhanh, muối sinh lý hoặc dung dịch Ringer's, tối đa 2 lít.</li>
             <li>Nếu không đáp ứng: adrenaline: 1:1,000, 0.5 ml (0.5 mg) tiêm bắp - lặp lại nếu cần. Ở bệnh nhi: 6-12 tuổi: 0.3 ml (0.3 mg) tiêm bắp; < 6 tuổi: 0.15 ml (0.15 mg) tiêm bắp.</li>
         </ol>
         <p><em>Phản ứng cường phế vị (tụt huyết áp và nhịp tim chậm):</em></p>
         <ol>
              <li>Nâng cao chân bệnh nhân.</li>
-             <li>Oxy qua mặt nạ ($6-10~l/min$).</li>
-             <li>Atropine 0.6-1.0 mg tiêm tĩnh mạch - lặp lại nếu cần sau 3-5 phút, tổng cộng tối đa 3 mg ($0.04~mg/kg$) ở người lớn. Ở bệnh nhi, dùng $0.02~mg/kg$ tiêm tĩnh mạch (tối đa 0.6 mg mỗi liều) lặp lại nếu cần, tổng cộng tối đa 2 mg.</li>
+             <li>Oxy qua mặt nạ (6-10~l/min).</li>
+             <li>Atropine 0.6-1.0 mg tiêm tĩnh mạch - lặp lại nếu cần sau 3-5 phút, tổng cộng tối đa 3 mg (0.04~mg/kg) ở người lớn. Ở bệnh nhi, dùng $0.02~mg/kg$ tiêm tĩnh mạch (tối đa 0.6 mg mỗi liều) lặp lại nếu cần, tổng cộng tối đa 2 mg.</li>
              <li>Truyền dịch tĩnh mạch: nhanh, muối sinh lý hoặc dung dịch Ringer's, tối đa 2 lít.</li>
              <li>Nếu bệnh nhân không đáp ứng với các biện pháp này, điều trị như phản vệ.</li>
         </ol>
@@ -614,7 +614,7 @@ td.right, th.right {
                      <td>
                         <strong>Liên quan đến bệnh nhân:</strong>
                         <ul>
-                            <li>Chức năng thận suy giảm, đặc biệt nếu $eGFR < 15~ml/min/1.73~m^2$.</li>
+                            <li>Chức năng thận suy giảm, đặc biệt nếu eGFR < 15~ml/min/1.73~m^2.</li>
                             <li>Bệnh nhân lọc máu.</li>
                         </ul>
                          <strong>Liên quan đến thuốc cản quang:</strong>
@@ -677,7 +677,7 @@ td.right, th.right {
                      <td><em>Gadovist®:</em> Chelate vòng non-ionic (BT-DO3A)<br/><em>Dotarem®:</em> Chelate vòng ionic (DOTA)<br/><em>Prohance®:</em> Chelate vòng non-ionic (HP-DO3A)</td>
                      <td>
                          <ul>
-                             <li>Nên sử dụng THẬN TRỌNG các thuốc này ở bệnh nhân có $eGFR < 30~ml/min$. Cần có ít nhất 7 ngày giữa hai lần tiêm.</li>
+                             <li>Nên sử dụng THẬN TRỌNG các thuốc này ở bệnh nhân có eGFR < 30~ml/min. Cần có ít nhất 7 ngày giữa hai lần tiêm.</li>
                              <li>Phụ nữ mang thai: có thể sử dụng các thuốc này để cung cấp thông tin chẩn đoán cần thiết.</li>
                              <li>Phụ nữ cho con bú: việc bỏ sữa mẹ trong 24 giờ sau khi dùng thuốc cản quang không được coi là cần thiết, nhưng bệnh nhân có thể thảo luận với bác sĩ xem có muốn làm điều này không.</li>
                              <li>Không bắt buộc phải xét nghiệm chức năng thận (eGFR) trong phòng thí nghiệm.</li>
@@ -854,9 +854,9 @@ td.right, th.right {
          <h3 id="b4-metformin">B.4 BỆNH NHÂN ĐÁI THÁO ĐƯỜNG DÙNG METFORMIN</h3>
          <h4>B.4.1. Môi trường cản quang chứa iod</h4>
          <ol>
-             <li>Bệnh nhân có eGFR > $30~ml/min/1.73~m^2$ và không có bằng chứng AKI, dùng thuốc cản quang tiêm tĩnh mạch hoặc tiêm động mạch có tiếp xúc thận lần hai: tiếp tục dùng metformin bình thường.</li>
+             <li>Bệnh nhân có eGFR > 30~ml/min/1.73~m^2 và không có bằng chứng AKI, dùng thuốc cản quang tiêm tĩnh mạch hoặc tiêm động mạch có tiếp xúc thận lần hai: tiếp tục dùng metformin bình thường.</li>
              <li>Bệnh nhân:
-                (a) có eGFR $< 30~ml/min/1.73~m^2$ dùng thuốc cản quang tiêm tĩnh mạch, hoặc tiêm động mạch có tiếp xúc thận lần hai.<br/>
+                (a) có eGFR < 30~ml/min/1.73~m^2 dùng thuốc cản quang tiêm tĩnh mạch, hoặc tiêm động mạch có tiếp xúc thận lần hai.<br/>
                 (b) dùng thuốc cản quang tiêm động mạch có tiếp xúc thận lần đầu.<br/>
                 (c) có AKI: Ngừng dùng metformin từ thời điểm dùng thuốc cản quang. Đo eGFR trong vòng 48 giờ và bắt đầu lại metformin nếu chức năng thận không thay đổi đáng kể.
              </li>
@@ -903,9 +903,9 @@ td.right, th.right {
         <p>Việc thực hành hiệu quả có thể bao gồm việc tiêm thuốc cản quang chứa iod và gadolinium cho CT và MR tăng cường trong cùng một ngày.</p>
         <p>Để giảm thiểu nguy cơ độc thận tiềm ẩn, khuyến nghị như sau:</p>
         <ol>
-            <li><strong>Bệnh nhân có chức năng thận bình thường hoặc suy giảm vừa phải ($eGFR > 30~ml/min/1.73~m^2$).</strong><br/>
+            <li><strong>Bệnh nhân có chức năng thận bình thường hoặc suy giảm vừa phải (eGFR > 30~ml/min/1.73~m^2).</strong><br/>
             75% thuốc cản quang chứa gadolinium và iod được bài tiết sau 4 giờ kể từ khi dùng. Nên có khoảng cách 4 giờ giữa các lần tiêm thuốc cản quang chứa iod và gadolinium.</li>
-             <li><strong>Bệnh nhân suy thận nặng ($eGFR < 30~ml/min/1.73~m^2$ hoặc đang lọc máu).</strong><br/>
+             <li><strong>Bệnh nhân suy thận nặng (eGFR < 30~ml/min/1.73~m^2 hoặc đang lọc máu).</strong><br/>
             Nên có khoảng cách 7 ngày giữa các lần tiêm thuốc cản quang chứa iod và gadolinium.</li>
         </ol>
         <p>Lưu ý: Thuốc cản quang chứa gadolinium cản tia X tốt và có thể bị diễn giải sai trên CT khi chúng đã được bài tiết vào đường tiết niệu. Đối với khám bụng, nên chụp CT tăng cường trước khi chụp MR tăng cường. Đối với khám ngực và não, có thể thực hiện CT hoặc MR trước.</p>
