--- a/contrast/index.html
+++ b/contrast/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hướng Dẫn ESUR về Thuốc Cản Quang 10.0</title>
+    <title>Hướng Dẫn ESUR về Thuốc Cản Quang bản 10.0</title>
     <style>
        body {
     font-family: Arial, sans-serif;
@@ -24,7 +24,7 @@
     padding: 0px; /* Giữ nguyên hoặc điều chỉnh padding bên trong navbar */
 
     /* Thêm margin để tạo khoảng cách */
-    margin-left: 40px; /* Khoảng cách với lề trái, ví dụ 20px */
+    margin-left: 10px; /* Khoảng cách với lề trái, ví dụ 20px */
     margin-bottom: 100px; /* Khoảng cách với lề dưới, ví dụ 20px */
 
     height: 98%; /* Giữ nguyên, nhưng margin-bottom sẽ làm giảm không gian thực tế còn lại */
